RESOLVED FIXED104903
Web Inspector: Native Memory Instrumentation: do not validate pointers to objects in RenderArena agains tcmalloc data
https://bugs.webkit.org/show_bug.cgi?id=104903
Summary Web Inspector: Native Memory Instrumentation: do not validate pointers to obj...
Ilya Tikhonovsky
Reported 2012-12-13 04:27:07 PST
EOM
Attachments
Patch (9.68 KB, patch)
2012-12-13 04:35 PST, Ilya Tikhonovsky
no flags
comments addressed (10.55 KB, patch)
2012-12-13 06:19 PST, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2012-12-13 04:35:27 PST
Yury Semikhatsky
Comment 2 2012-12-13 05:21:03 PST
I think we should rename the method to something like setCustomAllocation or setNotMalloced as Arena may be too specific allocator.
Build Bot
Comment 3 2012-12-13 05:23:57 PST
Ilya Tikhonovsky
Comment 4 2012-12-13 06:19:53 PST
Created attachment 179262 [details] comments addressed
Yury Semikhatsky
Comment 5 2012-12-13 06:22:04 PST
Comment on attachment 179262 [details] comments addressed View in context: https://bugs.webkit.org/attachment.cgi?id=179262&action=review > Source/WTF/wtf/MemoryObjectInfo.h:62 > + void setCustomAllocation(bool customAllocation) { m_customAllocation = customAllocation; } Are we ever going to call this with customAllocation = false ?
Ilya Tikhonovsky
Comment 6 2012-12-13 06:24:51 PST
Note You need to log in before you can comment on or make changes to this bug.