Web Inspector: Native Memory Instrumentation: do not validate pointers to objects in RenderArena agains tcmalloc data. https://bugs.webkit.org/show_bug.cgi?id=104903

Reviewed by Yury Semikhatsky.

This is a simplest approach to do that with zero performance overhead.

Source/WebCore:

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::reportMemoryUsage):
* rendering/InlineBox.cpp:
(WebCore::InlineBox::reportMemoryUsage):
(WebCore):
* rendering/InlineBox.h:
(InlineBox):
* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::reportMemoryUsage):
(WebCore):
* rendering/InlineTextBox.h:
(InlineTextBox):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::reportMemoryUsage):
* rendering/RenderObject.cpp:
(WebCore::RenderObject::reportMemoryUsage):

Source/WTF:

* wtf/MemoryInstrumentation.cpp:
(WTF::MemoryClassInfo::setCustomAllocation):
(WTF):
* wtf/MemoryInstrumentation.h:
(MemoryClassInfo):
* wtf/MemoryObjectInfo.h:
(WTF::MemoryObjectInfo::MemoryObjectInfo):
(WTF::MemoryObjectInfo::customAllocation):
(WTF::MemoryObjectInfo::setCustomAllocations):
(MemoryObjectInfo):

Canonical link: https://commits.webkit.org/123134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137589 268f45cc-cd09-0410-ab3c-d52691b4dbfc